--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,28 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>money-visualizer</name>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox</artifactId>
+			<version>1.8.6</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+			<!-- we will be using the Junit libs only for our test classes -->
+		</dependency>
+
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+	</dependencies>
+
 	<build>
 		<plugins>
 			<!-- We need the maven-compiler-plugin to tell maven to compile our code 
